force-app/main/default/objects/openq__Spend__c/openq__Spend__c.object-meta.xml
<CustomObject>
    <label>Spend</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Spend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>