force-app/main/default/objects/openq__Spend__c/fields/openq__Contact__c.field-meta.xml
<CustomField>
    <fullName>openq__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Spends</relationshipLabel>
    <relationshipName>Spends</relationshipName>
    <type>Lookup</type>
</CustomField>