force-app/main/default/objects/openq__Spend__c/fields/openq__Remaining_Projected__c.field-meta.xml
<CustomField>
    <fullName>openq__Remaining_Projected__c</fullName>
    <label>Remaining Projected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>