force-app/main/default/objects/openq__Spend__c/fields/openq__YTD_Actual__c.field-meta.xml
<CustomField>
    <fullName>openq__YTD_Actual__c</fullName>
    <label>YTD Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>